yaml_configs/home-assistant/07-home-assistant-cloudflare.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflare
  namespace: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflare
  template:
    metadata:
      labels:
        app: cloudflare
        name: cloudflare
    spec:
      containers:
        - name: cloudflare
          image: cloudflare/cloudflared:latest
          imagePullPolicy: Always
          args:
            - "tunnel"
            - "--no-autoupdate"
            - "run"
            - "--token"
            - "$(CLOUDFLARE_TOKEN)"  # Use environment variable
