yaml_configs/home-assistant/home-assistant-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: home-assistant


---

# home-assistant-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
      annotations:
        k8s.v1.cni.cncf.io/networks: |
          [{
            "name": "multus-iot",
            "namespace": "default",
            "mac": "72:b4:c4:40:6c:2e",
            "ips": ["192.168.1.190/24"]
          }]
    spec:
      containers:
      - name: home-assistant
        image: ghcr.io/home-assistant/home-assistant:stable
        ports:
        - containerPort: 8123
        volumeMounts:
        - name: home-assistant-storage
          mountPath: /config
          subPath: config
      volumes:
      - name: home-assistant-storage
        persistentVolumeClaim:
          claimName: home-assistant-pvc
