yaml_configs/home-assistant/home-assistant-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-service
  namespace: home-assistant
spec:
  type: LoadBalancer
  selector:
    app: home-assistant
  ports:
  - name: home-assistant
    port: 8123
    targetPort: 8123
  loadBalancerIP: 192.168.1.201
