yaml_configs/home-assistant/05-home-assistant-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-ingress
  namespace: home-assistant
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app: home-assistant
spec:
  rules:
  - host: ha.jsuri.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: homeassistant-service
            port:
              number: 8123
