yaml_configs/home-assistant/home-assistant-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-udp-outbound
  namespace: home-assistant
spec:
  podSelector:
    matchLabels:
      app: home-assistant
  policyTypes:
    - Egress
  egress:
  - {}
